# aprendendo-rust

./: .gitignore
001 - Hello Rust/: main.rs
002 - Hello Cargo/hello_cargo/: Cargo.toml
003 - Guessing Game/guessing_game/: Cargo.toml
003 - Guessing Game/guessing_game/src/: main.rs
003 - Guessing Game/guessing_game/src/commented/: main.rs
004 - Variables/variables/src/: main.rs
005 - Value Overflow/overflow/src/: main.rs
006 - Tuplas and Arrays/tuplas-arrays/: Cargo.toml
006 - Tuplas and Arrays/tuplas-arrays/src/: main.rs
007 - Functions/functions/src/: main.rs
008 - Control Fow/control-flow/src/: main.rs
009 - Convert Temperatures/temperature-converter/src/: main.rs
010 - References and Borrowing/ownership/src/: main.rs
